# touchgfx-cmake-vscode-stm32-simulator

./: README.md  STM32H735G-DK.ioc  backup_STM32H735G-DK.ioc
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: freertos.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
EWARM/: STM32H735G-DK.ewp  stm32h735xx_dtcmram.icf  stm32h735xx_flash.icf  stm32h735xx_flash_rw_sram1.icf  stm32h735xx_flash_rw_sram2.icf  stm32h735xx_sram1.icf
MDK-ARM/: STM32H735G-DK.uvprojx
Middlewares/ST/touchgfx/framework/include/common/: AbstractPartition.hpp  Meta.hpp  Partition.hpp  TouchGFXInit.hpp
Middlewares/ST/touchgfx/framework/include/mvp/: MVPApplication.hpp  MVPHeap.hpp  Presenter.hpp  View.hpp
Middlewares/ST/touchgfx/framework/include/platform/core/: MCUInstrumentation.hpp
Middlewares/ST/touchgfx/framework/include/platform/driver/button/: ButtonController.hpp
Middlewares/ST/touchgfx/framework/include/platform/driver/i2c/: I2C.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/: Application.hpp  Bitmap.hpp  Callback.hpp  Color.hpp  ConstFont.hpp  Drawable.hpp  EasingEquations.hpp  Event.hpp  Font.hpp  FontManager.hpp  InternalFlashFont.hpp  JSMOCHelper.hpp  Math3D.hpp  Matrix3x3.hpp  Screen.hpp  TextProvider.hpp  Texts.hpp  TextureMapTypes.hpp  TypedText.hpp  UIEventListener.hpp  Unicode.hpp  Utils.hpp  Version.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/canvas_widget_renderer/: CanvasWidgetRenderer.hpp  Cell.hpp  Outline.hpp  Rasterizer.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/containers/: CacheableContainer.hpp  Container.hpp  ListLayout.hpp  ModalWindow.hpp  ScrollableContainer.hpp  SlideMenu.hpp  Slider.hpp  SwipeContainer.hpp  ZoomAnimationImage.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/events/: ClickEvent.hpp  DragEvent.hpp  GestureEvent.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/hal/: Atomic.hpp  BlitOp.hpp  BoardConfiguration.hpp  Buttons.hpp  Config.hpp  DMA.hpp  FlashDataReader.hpp  FrameBufferAllocator.hpp  GPIO.hpp  Gestures.hpp  HAL.hpp  NoDMA.hpp  OSWrappers.hpp  Paint.hpp  PaintImpl.hpp  PaintRGB565Impl.hpp  PaintRGB888Impl.hpp  PartialFrameBufferManager.hpp  Types.hpp  VGData.hpp  VectorRenderer.hpp  VideoController.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/lcd/: DebugPrinter.hpp  LCD.hpp  LCD16DebugPrinter.hpp  LCD1DebugPrinter.hpp  LCD24DebugPrinter.hpp  LCD2DebugPrinter.hpp  LCD32DebugPrinter.hpp  LCD4DebugPrinter.hpp  LCD8ABGR2222DebugPrinter.hpp  LCD8ARGB2222DebugPrinter.hpp  LCD8BGRA2222DebugPrinter.hpp  LCD8DebugPrinterBase.hpp  LCD8RGBA2222DebugPrinter.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/mixins/: ClickListener.hpp  Draggable.hpp  FadeAnimator.hpp  MoveAnimator.hpp  Snapper.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/transforms/: DisplayTransformation.hpp  TouchCalibration.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/transitions/: BlockTransition.hpp  CoverTransition.hpp  NoTransition.hpp  SlideTransition.hpp  Transition.hpp  WipeTransition.hpp
Middlewares/ST/touchgfx/framework/include/touchgfx/widgets/: AbstractButton.hpp  AnimatedImage.hpp  AnimationTextureMapper.hpp  Box.hpp  BoxWithBorder.hpp  Button.hpp  ButtonWithIcon.hpp  ButtonWithLabel.hpp  Gauge.hpp  Image.hpp  Keyboard.hpp  PixelDataWidget.hpp  RadioButton.hpp  RadioButtonGroup.hpp  RepeatButton.hpp  SVGImage.hpp  ScalableImage.hpp  SnapshotWidget.hpp  TextArea.hpp  TextAreaWithWildcard.hpp  TextureMapper.hpp  TiledImage.hpp  ToggleButton.hpp  TouchArea.hpp  VideoWidget.hpp  Widget.hpp
Middlewares/ST/touchgfx/framework/source/touchgfx/containers/: CacheableContainer.cpp  Container.cpp  ListLayout.cpp  ModalWindow.cpp  ScrollableContainer.cpp  SlideMenu.cpp  Slider.cpp  SwipeContainer.cpp  ZoomAnimationImage.cpp
Middlewares/ST/touchgfx/framework/source/touchgfx/widgets/: AbstractButton.cpp  AnimatedImage.cpp  AnimationTextureMapper.cpp  Box.cpp  BoxWithBorder.cpp  Button.cpp  ButtonWithIcon.cpp  ButtonWithLabel.cpp  Gauge.cpp  Image.cpp  Keyboard.cpp  PixelDataWidget.cpp  RadioButton.cpp  RepeatButton.cpp  SVGImage.cpp  ScalableImage.cpp  SnapshotWidget.cpp  TextArea.cpp  TextAreaWithWildcard.cpp  TextureMapper.cpp  TiledImage.cpp  ToggleButton.cpp  TouchArea.cpp  VideoWidget.cpp
Middlewares/ST/touchgfx/framework/tools/textconvert/: main.rb  translations.rb  upgrader.rb
Middlewares/ST/touchgfx/framework/tools/textconvert/lib/: excel_reader.rb  file_io.rb  generator.rb  outputter.rb  sanitizer.rb  string_collector.rb  text_database_parser.rb  text_database_parser_4_17.rb  text_database_parser_4_18.rb  text_database_upgrader.rb  text_database_validator.rb  text_entries.rb  translation_io.rb  typographies.rb  version.rb  xml_reader.rb  xml_validator.rb  xml_writer.rb
Middlewares/ST/touchgfx/framework/tools/videoconvert/: bintoelf.rb  videoconvert.rb
Middlewares/ST/touchgfx/lib/core/cortex_m33/Keil6.x/: touchgfx_core_wchar16.lib  touchgfx_core_wchar32.lib
Middlewares/ST/touchgfx/lib/core/cortex_m4f/Keil6.x/: touchgfx_core_wchar16.lib  touchgfx_core_wchar32.lib
Middlewares/ST/touchgfx/lib/win/msvs/: libtouchgfx_v100.lib  libtouchgfx_v100_debug.lib  libtouchgfx_v110.lib  libtouchgfx_v110_debug.lib  libtouchgfx_v120.lib  libtouchgfx_v120_debug.lib  libtouchgfx_v140.lib  libtouchgfx_v140_debug.lib  libtouchgfx_v142.lib  libtouchgfx_v143_debug.lib
STM32CubeIDE/: .cproject  .project
TouchGFX/: ApplicationTemplate.touchgfx.part  CMakeLists.txt  CMakePresets.json  h735_touchgfx_vscode.touchgfx  target.config
TouchGFX/assets/texts/: texts.xml
TouchGFX/cmake/: i686-w64-mingw32-gcc.cmake
TouchGFX/config/gcc/: app.mk
TouchGFX/config/msvs/: Application.props
TouchGFX/gui/include/gui/model/: Model.hpp  ModelListener.hpp
TouchGFX/gui/include/gui/screen1_screen/: Screen1Presenter.hpp  Screen1View.hpp
TouchGFX/gui/src/model/: Model.cpp
TouchGFX/gui/src/screen1_screen/: Screen1Presenter.cpp  Screen1View.cpp
TouchGFX/simulator/msvs/: Application.vcxproj.filters
(+185 files in other folders)
